--- a/exactBirthday/index.html
+++ b/exactBirthday/index.html
@@ -1,1 +1,27 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Exact birthday</title>
+    <link rel="stylesheet" href="css.css">
+    <meta name="viewport" content="width=device-width">
+</head>
+<body>
+    <div id=c>
+        <div>
+            Date of birth:<br>
+            <input type="date" id=bdi>
+        </div>
+        <div>
+            Time of birth (optional):<br>
+            <input type="time" id=bti>
+        </div>
+    </div>
+    <div id=mc>
+        You are exactly
+        <div id=m></div>
+        years old.
+    </div>
+    <script src="js.js"></script>
+</body>
+</html>
