--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="ballPhysics/">ballPhysics</a> <br>
         <a href="collision/">collision</a> <br>
         <a href="Death/">Death</a> <br>
+        <a href="eval%20vs%20not%20eval/">eval vs not eval</a>
         <a href="FlappyBird%20but%20not/">FlappyBird but not</a> <br>
         <a href="gameThing/">gameThing</a> <br>
         <a href="JaPCode/">JaPCode</a> <br>
@@ -30,10 +31,14 @@
         <a href="conwaysGameOfLifeGraphics/">conwaysGameOfLifeGraphics</a> <br>
         <a href="pythonSweeper/">pythonSweeper</a> <br>
         <a href="/20Time%20-%20GrammarCheck/">20Time - GrammarCheck</a> <br>
+        <a href="Asteroids/">Asteroids</a> <br>
         <a href="CanvasAttempt2/">CanvasAttempt2</a> <br>
+        <a href="CanvasDraw/">CanvasDraw</a> <br>
         <a href="hslTest/">hslTest</a> <br>
         <a href="threejsTests/">threejsTests</a> <br>
         <a href="3dPong/">3dPong</a> <br>
+        <a href="EmojiDraw/"></a> <br>
+        <a href="exactBirthday/">exactBirthday</a>
     </div>
 </body>
 
