give label to emojidraw
because I wasn't observant the first time

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <a href="hslTest/">hslTest</a> <br>
         <a href="threejsTests/">threejsTests</a> <br>
         <a href="3dPong/">3dPong</a> <br>
-        <a href="EmojiDraw/"></a> <br>
+        <a href="EmojiDraw/">EmojiDraw</a> <br>
         <a href="exactBirthday/">exactBirthday</a>
     </div>
 </body>
