--- a/index.html
+++ b/index.html
@@ -5,38 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thingy_2018</title>
+    <style>
+        a {
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
     <div>
-        <a href="https://japnaa.github.io/Thingy/">..</a> <br>
-        <a href="EmojiDraw/">EmojiDraw</a> <br>
-        <a href="theSandboxClone/">theSandboxClone</a> <br>
-        <a href="Asteroids/">Asteroids</a> <br>
-        <a href="ballPhysics/">ballPhysics</a> <br>
-        <a href="collision/">collision</a> <br>
-        <a href="Death/">Death</a> <br>
+        <a href="https://japnaa.github.io/Thingy/">..</a>
+        <a href="EmojiDraw/">EmojiDraw</a>
+        <a href="theSandboxClone/">theSandboxClone</a>
+        <a href="Asteroids/">Asteroids</a>
+        <a href="ballPhysics/">ballPhysics</a>
+        <a href="collision/">collision</a>
+        <a href="Death/">Death</a>
         <a href="eval%20vs%20not%20eval/">eval vs not eval</a>
-        <a href="FlappyBird%20but%20not/">FlappyBird but not</a> <br>
-        <a href="gameThing/">gameThing</a> <br>
-        <a href="JaPCode/">JaPCode</a> <br>
-        <a href="Math/">Math</a> <br>
-        <a href="MeanMedianMode/">MeanMedianMode</a> <br>
-        <a href="minesweeperAI/">minesweeperAI</a> <br>
-        <a href="spendALot/">spendALot</a> <br>
-        <a href="ticTacToeMachineLearning/">ticTacToeMachineLearning</a> <br>
-        <a href="wordScrambler/">wordScrambler</a> <br>
-        <a href="binaryText/">binaryText</a> <br>
-        <a href="conwaysGameOfLife/">conwaysGameOfLife</a> <br>
-        <a href="conwaysGameOfLifeGraphics/">conwaysGameOfLifeGraphics</a> <br>
-        <a href="pythonSweeper/">pythonSweeper</a> <br>
-        <a href="/20Time%20-%20GrammarCheck/">20Time - GrammarCheck</a> <br>
-        <a href="Asteroids/">Asteroids</a> <br>
-        <a href="CanvasAttempt2/">CanvasAttempt2</a> <br>
-        <a href="CanvasDraw/">CanvasDraw</a> <br>
-        <a href="hslTest/">hslTest</a> <br>
-        <a href="threejsTests/">threejsTests</a> <br>
-        <a href="3dPong/">3dPong</a> <br>
+        <a href="FlappyBird%20but%20not/">FlappyBird but not</a>
+        <a href="gameThing/">gameThing</a>
+        <a href="JaPCode/">JaPCode</a>
+        <a href="Math/">Math</a>
+        <a href="MeanMedianMode/">MeanMedianMode</a>
+        <a href="minesweeperAI/">minesweeperAI</a>
+        <a href="spendALot/">spendALot</a>
+        <a href="ticTacToeMachineLearning/">ticTacToeMachineLearning</a>
+        <a href="wordScrambler/">wordScrambler</a>
+        <a href="binaryText/">binaryText</a>
+        <a href="conwaysGameOfLife/">conwaysGameOfLife</a>
+        <a href="conwaysGameOfLifeGraphics/">conwaysGameOfLifeGraphics</a>
+        <a href="pythonSweeper/">pythonSweeper</a>
+        <a href="/20Time%20-%20GrammarCheck/">20Time - GrammarCheck</a>
+        <a href="Asteroids/">Asteroids</a>
+        <a href="CanvasAttempt2/">CanvasAttempt2</a>
+        <a href="CanvasDraw/">CanvasDraw</a>
+        <a href="hslTest/">hslTest</a>
+        <a href="threejsTests/">threejsTests</a>
+        <a href="3dPong/">3dPong</a>
         <a href="exactBirthday/">exactBirthday</a>
     </div>
 </body>
