Add some forgotten projects and updates to those projects

--- a/3dPong/index.html
+++ b/3dPong/index.html
@@ -5,7 +5,7 @@
 <head>
     <title> 3d Pong</title>
     <link rel="stylesheet" href="css.css" />
-    <script src="//japnaa.github.io/e/three.min.js"></script>
+    <script src="ext/three.min.js"></script>
 </head>
 
 <body>
