--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thingy_2018</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title> Index of Thingy_2017 </title>
+
     <style>
         a {
             display: block;
@@ -14,35 +16,7 @@
 
 <body>
     <div>
-        <a href="https://japnaa.github.io/Thingy/">..</a>
-        <a href="EmojiDraw/">EmojiDraw</a>
-        <a href="theSandboxClone/">theSandboxClone</a>
-        <a href="Asteroids/">Asteroids</a>
-        <a href="ballPhysics/">ballPhysics</a>
-        <a href="collision/">collision</a>
-        <a href="Death/">Death</a>
-        <a href="eval%20vs%20not%20eval/">eval vs not eval</a>
-        <a href="FlappyBird%20but%20not/">FlappyBird but not</a>
-        <a href="gameThing/">gameThing</a>
-        <a href="JaPCode/">JaPCode</a>
-        <a href="Math/">Math</a>
-        <a href="MeanMedianMode/">MeanMedianMode</a>
-        <a href="minesweeperAI/">minesweeperAI</a>
-        <a href="spendALot/">spendALot</a>
-        <a href="ticTacToeMachineLearning/">ticTacToeMachineLearning</a>
-        <a href="wordScrambler/">wordScrambler</a>
-        <a href="binaryText/">binaryText</a>
-        <a href="conwaysGameOfLife/">conwaysGameOfLife</a>
-        <a href="conwaysGameOfLifeGraphics/">conwaysGameOfLifeGraphics</a>
-        <a href="pythonSweeper/">pythonSweeper</a>
-        <a href="/20Time%20-%20GrammarCheck/">20Time - GrammarCheck</a>
-        <a href="Asteroids/">Asteroids</a>
-        <a href="CanvasAttempt2/">CanvasAttempt2</a>
-        <a href="CanvasDraw/">CanvasDraw</a>
-        <a href="hslTest/">hslTest</a>
-        <a href="threejsTests/">threejsTests</a>
-        <a href="3dPong/">3dPong</a>
-        <a href="exactBirthday/">exactBirthday</a>
+        <a href="https://japnaa.github.io/Thingy/"> .. </a><a href="0p/"> 0p </a><a href="20Time - GrammarCheck/"> 20Time - GrammarCheck </a><a href="3dPong/"> 3dPong </a><a href="AccuClock/"> AccuClock </a><a href="Asteroids/"> Asteroids </a><a href="CanvasAttempt2/"> CanvasAttempt2 </a><a href="CanvasDraw/"> CanvasDraw </a><a href="Death/"> Death </a><a href="EmojiDraw/"> EmojiDraw </a><a href="FlappyBird but not/"> FlappyBird but not </a><a href="JaPCode/"> JaPCode </a><a href="Math/"> Math </a><a href="MeanMedianMode/"> MeanMedianMode </a><a href="Pretty Button/"> Pretty Button </a><a href="QuickHTML/"> QuickHTML </a><a href="Thing/"> Thing </a><a href="WebGL/"> WebGL </a><a href="ballPhysics/"> ballPhysics </a><a href="binaryText/"> binaryText </a><a href="collision/"> collision </a><a href="conwaysGameOfLife/"> conwaysGameOfLife </a><a href="conwaysGameOfLifeGraphics/"> conwaysGameOfLifeGraphics </a><a href="eval vs not eval/"> eval vs not eval </a><a href="exactBirthday/"> exactBirthday </a><a href="gameThing/"> gameThing </a><a href="hslTest/"> hslTest </a><a href="keyCode/"> keyCode </a><a href="minesweeperAI/"> minesweeperAI </a><a href="pythonSweeper/"> pythonSweeper </a><a href="spendALot/"> spendALot </a><a href="theSandboxClone/"> theSandboxClone </a><a href="threejsTests/"> threejsTests </a><a href="ticTacToeMachineLearning/"> ticTacToeMachineLearning </a><a href="wordCount/"> wordCount </a><a href="wordScrambler/"> wordScrambler </a>
     </div>
 </body>
 
