fix broken link

--- a/CanvasDraw/index.html
+++ b/CanvasDraw/index.html
@@ -75,7 +75,7 @@
 </head>
 
 <body>
-    <script src="https://rawgit.com/JaPNaA/kKJFDKJHhAIULFyOWYR-YQ-eyouHSDUIiuamsd/master/%24.js"></script>
+    <script src="http://japnaa.github.io/Thingy/$.js"></script>
     <script>
         (function() { //Set values
             var vars = {
