Fix project for recent browsers: http -> https

--- a/CanvasDraw/index.html
+++ b/CanvasDraw/index.html
@@ -75,7 +75,7 @@
 </head>
 
 <body>
-    <script src="http://japnaa.github.io/Thingy/$.js"></script>
+    <script src="https://japnaa.github.io/Thingy/$.js"></script>
     <script>
         (function() { //Set values
             var vars = {
